--- a/source.html
+++ b/source.html
@@ -4,43 +4,29 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Source</title>
-	<style type="text/css" media="screen">
-#LocalBadge,#LocalBadge2 {
+	<title>LocalBadge (Source)</title>
+<style type="text/css" media="screen">
+#LocalBadge {
   position: fixed;
-  right: -50px;
-  top: -30px;
-  background: red;
-  font: 15px Helvetica, Arial, sans-serif;
+  right: -45px;
+  top: -25px;
 }
-#LocalBadge > div,#LocalBadge2 > div {
+#LocalBadge > div {
+  font: 15px/17px Helvetica, Arial, sans-serif;
   -webkit-transform: rotate(45deg);
   -webkit-transform-origin: 0 0;
   -moz-transform: rotate(45deg);
   -moz-transform-origin: 0 0;
-  background: #444;
-  background: -webkit-gradient(linear,left top,left bottom,from(#444),to(#333));
-  width: 75px;
-  height: 40px;
+  -webkit-box-shadow: 2px 2px 5px #aaa;
+  -moz-box-shadow: 2px 2px 5px #aaa;
+  background: #222;
+  background: -webkit-gradient(linear,left top,left bottom,from(#444),to(#222));
+  width: 70px;
+  padding-top: 15px;
   text-align: center;
-  line-height: 60px;
   color: #E458B4;
-  -webkit-box-shadow: 5px 5px 5px #ddd;
-}
-#LocalBadge2 > div {
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-}
-#LocalBadge2 > div > div {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-}
-#LocalBadge2 {
-  top: auto;
-  bottom: -15px;
-  right: -110px;
-}
 
+}
 </style>
 </head>
 <body>
@@ -48,12 +34,17 @@
   
 
 
+<p><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button><button>tempor</button> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<div id="LocalBadge"><div><div>local</div></div></div>
-<div id="LocalBadge2"><div><div>local</div></div></div>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<div id="LocalBadge"><div>local</div></div>
 
 </body>
 </html>
